[package]
name = "purchchain-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
log = "0.4"
sha2 = "0.10"
tiny-keccak = "2.0"
k256 = { version = "0.11", features = ["ecdsa"] }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4"